# django-svelte-jsoneditor

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  docker-compose.yml  postattach.sh  postcreate.sh
.github/workflows/: add-issues-to-octue-board.yml  cd.yml  ci.yml  codeql.yml  publish.yml  release.yml  update-pull-request.yml
django_svelte_jsoneditor/: __init__.py  apps.py  exceptions.py  settings.py  widgets.py
django_svelte_jsoneditor/static/django_svelte_jsoneditor/css/: svelte_jsoneditor.css
django_svelte_jsoneditor/static/django_svelte_jsoneditor/js/: svelte_jsoneditor.js
django_svelte_jsoneditor/templates/django_svelte_jsoneditor/widgets/: svelte_jsoneditor.html
docs/: requirements.txt  watch.py
docs/source/: .gitignore  conf.py  contributing.rst  editor_properties.rst  getting_started.rst  index.rst  license.rst  settings.rst  version_history.rst
tests/: _utils.py  test_widget.py
tests/server/: settings.py  urls.py
tests/server/example/: admin.py  apps.py  models.py  views.py
tests/server/example/migrations/: 0001_initial.py  0002_examplemultiplejsonfieldmodel.py
