[metadata]
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[flake8]
max-line-length = 120
exclude = .devcontainer,.tox,.git,*/migrations/*,*/static/*,docs,node_modules,build,.pytest_cache
ignore = F405, E501, W503

[isort]
line_length=120
default_section = THIRDPARTY
known_third_party = django*,drf*,environ,google,google*,graphene,grapple,guardian,requests,rest*
known_first_party = django_svelte_jsoneditor,app,settings,test,tests
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
no_lines_before = THIRDPARTY, LOCALFOLDER
lines_after_imports=2
# These are necessary for `isort` to create import statements that are
# compatible with `black`. Changing these will break our auto-formatting.
# See <https://black.readthedocs.io/en/stable/the_black_code_style.html>.
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
